# VeriBench

./: CMakeLists.txt  README.md
analyzer/smallbank/: aggregate_smallbank.py  parse_smallbank.py  process_smallbank.py  run_analyzer.sh
analyzer/tpcc/: aggregate_tpcc.py  parse_tpcc.py  process_tpcc.py  run_analyzer.sh
analyzer/ycsb/: aggregate.py  parse_result.py  process_logs.py  run_analyzer.sh
dbadapter/: CMakeLists.txt  dbadapter.h
dbadapter/ccf/: ccf.cc  ccf.h
dbadapter/ccf/conf/: clean.sh  config.properties  docker_clean.sh  docker_id  docker_start.sh  docker_stop.sh  start_nodes.sh  start_primary.sh  start_server.sh  stop_server.sh  tid
dbadapter/ccf/conf/config/: cchost_config_virtual_cpp.json  cchost_config_virtual_cpp_join.json  join_template.json  start_template.json
dbadapter/ccf/conf/cpp/app/: app.cpp
dbadapter/ccf/conf/docker/: ccf_app_cpp.enclave  ccf_app_cpp.virtual  ccf_app_cpp_join.virtual
dbadapter/ccf/conf/script/: gen-open-service.sh  init.sh  read.json  request.json  set_user.json  state_digest.json  test.sh  transition_service_to_open.json  user0_cert.pem  user0_enc_privk.pem  user0_enc_pubk.pem  user0_privk.pem
dbadapter/ccf/conf/script/cpp/: a.out  main.cc
dbadapter/glassdb/: glassdb.cc  glassdb.h
dbadapter/glassdb/conf/: config.properties  docker_start.sh  start_replica.sh
dbadapter/ledgerdb/: ledgerdb.cc  ledgerdb.h
dbadapter/ledgerdb/conf/: clean.sh  config.properties  docker_start.sh  gen_conf.sh  start_replica.sh  start_server.sh
dbadapter/merkle2/: merkle2.cc  merkle2.h
dbadapter/merkle2/conf/: clean.sh  clients  config.properties  docker_clean.sh  docker_start.sh  start_server.sh  stop_server.sh  test.sh
dbadapter/qldb/: qldb.cc  qldb.h
dbadapter/qldb/conf/: docker_start.sh  start_server.sh  stop_replica.sh
dbadapter/sqlledger/: sqlledger.cc  sqlledger.h
dbadapter/sqlledger/conf/: docker_clean.sh  docker_start.sh  gen_conf.py  stop_server.sh
dbs/ledgerdb/include/LedgerDatabase/distributed/proto/: common-proto.pb.h  vr-proto.pb.h
dbs/ledgerdb/include/distributed/replication/common/: client.h  log.h  replica.h
dbs/ledgerdb/include/distributed/replication/vr/: client.h  replica.h
dbs/ledgerdb/include/distributed/store/common/: timestamp.h  transaction.h
dbs/ledgerdb/include/distributed/store/common/backend/: txnstore.h  versionstore.h
dbs/ledgerdb/include/distributed/store/common/frontend/: txnclient.h
dbs/ledgerdb/include/distributed/store/strongstore/: client.h  server.h  shardclient.h
dbs/ledgerdb/include/proto/: request.pb.h  strong-proto.pb.h
dbs/ledgerdb/lib/: libevent-2.1.so.7  libevent_core-2.1.so.7  libevent_pthreads-2.1.so.7  libgflags.so.2.2  libtbb.so.2
dbs/merkle2/include/: MerkleSquareClient.go  MerkleSquare_C_API.go  _test.cpp  merklesquare_capi.h  merklesquare_go.h
docker/: BuildCCF  BuildGlassDB  BuildLedgerDB  BuildMerkle2  BuildQLDB  BuildSQLLedger
exps/: CMakeLists.txt  clean_client.sh  clients  conf.sh  docker_start_client.sh  docker_wait_client.sh  main.cc  parse_lat.py  parse_lat_op.py  parse_scale.py  parse_tps.py  parse_wl.py  parse_wl_abort.py  run_all.sh  run_docker.sh  run_exps.sh  setup.sh  start_multiple_clients.sh  sync_config.sh  test.sh  workers
workload/: CMakeLists.txt  workload.h
workload/smallbank/: smallbank.cc  smallbank.h
workload/tpcc/: tpcc.cc  tpcc.h
workload/ycsb/: ycsb.cc  ycsb.h
workload/ycsb/conf/: balanced  provenance  range  range-10  range-100  range-1000  read-heavy  write-heavy  zipf-0.6  zipf-0.9  zipf-1.2  zipf-1.5
