CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ledgerbench)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -pthread -lssl -Wall -Wno-unused-function -fPIC")

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LIST(APPEND LEDGERBENCH_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dbs/ledgerdb/include/LedgerDatabase")
LIST(APPEND LEDGERBENCH_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dbs/merkle2/include")
LIST(APPEND LEDGERBENCH_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dbadapter")
LIST(APPEND LEDGERBENCH_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/workload")
INCLUDE_DIRECTORIES(${LEDGERBENCH_INCLUDE_DIR})

ADD_SUBDIRECTORY(dbadapter)
ADD_SUBDIRECTORY(workload)
ADD_SUBDIRECTORY(exps)
